// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Title /> Handles not having any data properly 1`] = `null`;

exports[`<Title /> compact 1`] = `
.c0 {
  --tw-text-opacity: 1;
  color: rgba(103,73,177,var(--tw-text-opacity));
  font-size: 1.875rem;
  line-height: 2.25rem;
  margin-bottom: 0px;
  margin-top: 0.5rem;
  font-family: Inconsolata,monospace;
  font-size: 2.25rem;
  line-height: 2.5rem;
  font-weight: 700;
}

@media print {
  .c0 {
    margin: 0px;
    --tw-shadow: 0 0 #0000;
    box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow);
  }
}

<h1
  class="c0"
  data-testid="headerTitle"
>
  kayak kayak
</h1>
`;

exports[`<Title /> displays title 1`] = `
.c0 {
  --tw-text-opacity: 1;
  color: rgba(103,73,177,var(--tw-text-opacity));
  margin-bottom: 0px;
  margin-top: 0.5rem;
  font-family: Inconsolata,monospace;
  font-size: 2.25rem;
  line-height: 2.5rem;
  font-weight: 700;
}

@media print {
  .c0 {
    margin: 0px;
    --tw-shadow: 0 0 #0000;
    box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow);
  }
}

<h1
  class="c0"
  data-testid="headerTitle"
>
  kayak kayak
</h1>
`;

exports[`<Title /> lightmode 1`] = `
.c0 {
  --tw-text-opacity: 1;
  color: rgba(255,255,255,var(--tw-text-opacity));
  margin-bottom: 0px;
  margin-top: 0.5rem;
  font-family: Inconsolata,monospace;
  font-size: 2.25rem;
  line-height: 2.5rem;
  font-weight: 700;
}

@media print {
  .c0 {
    margin: 0px;
    --tw-shadow: 0 0 #0000;
    box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow);
  }
}

<h1
  class="c0"
  data-testid="headerTitle"
>
  kayak kayak
</h1>
`;

exports[`<Title /> lightmode and compact 1`] = `
.c0 {
  --tw-text-opacity: 1;
  color: rgba(255,255,255,var(--tw-text-opacity));
  font-size: 1.875rem;
  line-height: 2.25rem;
  margin-bottom: 0px;
  margin-top: 0.5rem;
  font-family: Inconsolata,monospace;
  font-size: 2.25rem;
  line-height: 2.5rem;
  font-weight: 700;
}

@media print {
  .c0 {
    margin: 0px;
    --tw-shadow: 0 0 #0000;
    box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow);
  }
}

<h1
  class="c0"
  data-testid="headerTitle"
>
  kayak kayak
</h1>
`;
